2002-02-20  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/__init__.py: autocreate
	product directory.

	* SkunkWeb/Services/product/loader.py (Product.__reallyload):
	stopped using a vfs importer for directory products.
	(Product.load): improved dependency check -- optionally
	can include version in dependency. (Product): moved static
	methods to module methods.

	* configure.in, configure, SkunkWeb/configure.in,
	SkunkWeb/configure: added reference to product service.

2002-02-19  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/: adding first cut at a
	product service.  loader.py has a Product class, and loads
	products; manifest.py reads and writes manifest files.

	* pylibs/vfs/zipfs.py (ZipFS.__init__), pylibs/vfs/tarfs.py
	(TarFS.__init__):  default value for root parameter was wrong in
	both cases; fixed.

	* pylibs/vfs/tarfs.py (TarFS.__init__): support for root
	parameter. 

	* pylibs/vfs/zipfs.py (ZipFS.__init__): support for root
	parameter. 

	* pylibs/vfs/vfs.py (FileNotFoundException,
	NotWriteableException): some new VFSException subclasses.	
	(FS.isWriteable): FS implementations can now declare whether
	they are writeable.  This is most useful in the cases when they
	aren't, as an fs being writeable doesn't mean that a particular
	write operation is possible.

	* pylibs/vfs/pathutil.py (Archive): added support for "root"
	parameter. 

2002-02-18  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}):
	another LaTeX typo, grrr.

2002-02-17  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}): forgot 
	an "\end{verbatim}"; fixed.

2002-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}): added
	documentation for CONNECTION.extract_args.

	* pylibs/vfs/importer.py: still very primitive import hook for vfs.
